feat: profile page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<link
 			rel="icon"
-			type="image/x-icon"
-			href="assets/images/logos/logo.ico"
+			type="image/png"
+			href="assets/images/icons/netflixFavicon.png"
 		/>
 		<link
 			rel="preconnect"
